translate.output
Terminals which are not used

   DIV
   FLOAT


Grammar

    0 $accept: program $end

    1 program: PROGRAM ID EOL typeDefinitions variableDeclarations subprogramDeclarations compoundStatement STOP

    2 variableDeclarations: VAR multiVarDeclarations
    3                     | /* empty */

    4 multiVarDeclarations: variableDeclaration EOL multiVarDeclarations
    5                     | variableDeclaration EOL

    6 variableDeclaration: identifierList DECLARE type

    7 identifierList: ID multiIds

    8 multiIds: SEPARATOR identifierList
    9         | /* empty */

   10 subprogramDeclarations: procedureDeclaration EOL subprogramDeclarations
   11                       | functionDeclaration EOL subprogramDeclarations
   12                       | /* empty */

   13 functionDeclaration: func ID PAREN_L formalParameterList PAREN_R DECLARE resultType EOL blockOrForward

   14 resultType: ID

   15 func: FUNC

   16 proc: PROCEDURE

   17 procedureDeclaration: proc ID PAREN_L formalParameterList PAREN_R EOL blockOrForward

   18 blockOrForward: block
   19               | FORWARD

   20 block: variableDeclarations compoundStatement

   21 paramDeclare: identifierList DECLARE type

   22 paramList: paramList EOL paramDeclare
   23          | paramDeclare

   24 formalParameterList: paramList
   25                    | /* empty */

   26 compoundStatement: BGN statementSequence endOfBlock

   27 statementSequence: statement EOL statementSequence
   28                  | statement

   29 statement: open
   30          | matched

   31 otherStatements: compoundStatement
   32                | simpleStatement

   33 loopHeader: FOR ID ASSIGNMENT expression TO expression DO
   34           | WHILE expression DO

   35 open: IF expression THEN statement
   36     | IF expression THEN matched ELSE open
   37     | loopHeader open

   38 matched: IF expression THEN matched ELSE matched
   39        | otherStatements
   40        | loopHeader matched

   41 simpleStatement: assignmentStatement
   42                | procedureStatement
   43                | /* empty */

   44 assignmentStatement: variable ASSIGNMENT expression

   45 procedureStatement: ID PAREN_L actualParameterList PAREN_R

   46 apList: expression SEPARATOR apList
   47       | expression

   48 actualParameterList: apList
   49                    | /* empty */

   50 variable: ID componentSelection

   51 componentSelection: STOP ID componentSelection
   52                   | ARRAY_L expression ARRAY_R componentSelection
   53                   | /* empty */

   54 expression: simpleExpression relationalOp simpleExpression
   55           | simpleExpression

   56 simpleExpression: sign term addOpTerm

   57 addOpTerm: addOp term addOpTerm
   58          | /* empty */

   59 relationalOp: RELATIONAL
   60             | EQUALS

   61 mulOpFactor: mulOp factor mulOpFactor
   62            | /* empty */

   63 term: factor mulOpFactor

   64 factorOptions: INT
   65              | STRING_LITERAL
   66              | variable
   67              | functionReference
   68              | NOT factor
   69              | PAREN_L expression PAREN_R

   70 factor: factorOptions

   71 functionReference: ID PAREN_L actualParameterList PAREN_R

   72 addOp: ADDOP
   73      | OR

   74 mulOp: MULTIOP
   75      | MOD
   76      | AND

   77 sign: ADDOP
   78     | /* empty */

   79 typeDefinitions: TYPE multipleTypeDefs
   80                | /* empty */

   81 multipleTypeDefs: typeDefinition multipleTypeDefs
   82                 | /* empty */

   83 typeDefinition: ID EQUALS type EOL

   84 type: ARRAY ARRAY_L INT RANGE INT ARRAY_R OF type
   85     | RECORD fieldList endOfBlock
   86     | ID

   87 fieldList: paramDeclare EOL fieldList
   88          | paramDeclare

   89 endOfBlock: END


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 76
BGN (259) 26
FORWARD (260) 19
DIV (261)
DO (262) 33 34
ELSE (263) 36 38
END (264) 89
FOR (265) 33
FUNC (266) 15
IF (267) 35 36 38
ARRAY (268) 84
MOD (269) 75
NOT (270) 68
OF (271) 84
OR (272) 73
PROCEDURE (273) 16
PROGRAM (274) 1
RECORD (275) 85
THEN (276) 35 36 38
TO (277) 33
TYPE (278) 79
VAR (279) 2
WHILE (280) 34
ADDOP (281) 72 77
MULTIOP (282) 74
RELATIONAL (283) 59
EQUALS (284) 60 83
STOP (285) 1 51
SEPARATOR (286) 8 46
DECLARE (287) 6 13 21
EOL (288) 1 4 5 10 11 13 17 22 27 83 87
ASSIGNMENT (289) 33 44
RANGE (290) 84
PAREN_L (291) 13 17 45 69 71
PAREN_R (292) 13 17 45 69 71
ARRAY_L (293) 52 84
ARRAY_R (294) 52 84
FLOAT (295)
INT (296) 64 84
ID (297) 1 7 13 14 17 33 45 50 51 71 83 86
STRING_LITERAL (298) 65


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
variableDeclarations (46)
    on left: 2 3, on right: 1 20
multiVarDeclarations (47)
    on left: 4 5, on right: 2 4
variableDeclaration (48)
    on left: 6, on right: 4 5
identifierList (49)
    on left: 7, on right: 6 8 21
multiIds (50)
    on left: 8 9, on right: 7
subprogramDeclarations (51)
    on left: 10 11 12, on right: 1 10 11
functionDeclaration (52)
    on left: 13, on right: 11
resultType (53)
    on left: 14, on right: 13
func (54)
    on left: 15, on right: 13
proc (55)
    on left: 16, on right: 17
procedureDeclaration (56)
    on left: 17, on right: 10
blockOrForward (57)
    on left: 18 19, on right: 13 17
block (58)
    on left: 20, on right: 18
paramDeclare (59)
    on left: 21, on right: 22 23 87 88
paramList (60)
    on left: 22 23, on right: 22 24
formalParameterList (61)
    on left: 24 25, on right: 13 17
compoundStatement (62)
    on left: 26, on right: 1 20 31
statementSequence (63)
    on left: 27 28, on right: 26 27
statement (64)
    on left: 29 30, on right: 27 28 35
otherStatements (65)
    on left: 31 32, on right: 39
loopHeader (66)
    on left: 33 34, on right: 37 40
open (67)
    on left: 35 36 37, on right: 29 36 37
matched (68)
    on left: 38 39 40, on right: 30 36 38 40
simpleStatement (69)
    on left: 41 42 43, on right: 32
assignmentStatement (70)
    on left: 44, on right: 41
procedureStatement (71)
    on left: 45, on right: 42
apList (72)
    on left: 46 47, on right: 46 48
actualParameterList (73)
    on left: 48 49, on right: 45 71
variable (74)
    on left: 50, on right: 44 66
componentSelection (75)
    on left: 51 52 53, on right: 50 51 52
expression (76)
    on left: 54 55, on right: 33 34 35 36 38 44 46 47 52 69
simpleExpression (77)
    on left: 56, on right: 54 55
addOpTerm (78)
    on left: 57 58, on right: 56 57
relationalOp (79)
    on left: 59 60, on right: 54
mulOpFactor (80)
    on left: 61 62, on right: 61 63
term (81)
    on left: 63, on right: 56 57
factorOptions (82)
    on left: 64 65 66 67 68 69, on right: 70
factor (83)
    on left: 70, on right: 61 63 68
functionReference (84)
    on left: 71, on right: 67
addOp (85)
    on left: 72 73, on right: 57
mulOp (86)
    on left: 74 75 76, on right: 61
sign (87)
    on left: 77 78, on right: 56
typeDefinitions (88)
    on left: 79 80, on right: 1
multipleTypeDefs (89)
    on left: 81 82, on right: 79 81
typeDefinition (90)
    on left: 83, on right: 81
type (91)
    on left: 84 85 86, on right: 6 21 83 84
fieldList (92)
    on left: 87 88, on right: 85 87
endOfBlock (93)
    on left: 89, on right: 26 85


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM . ID EOL typeDefinitions variableDeclarations subprogramDeclarations compoundStatement STOP

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PROGRAM ID . EOL typeDefinitions variableDeclarations subprogramDeclarations compoundStatement STOP

    EOL  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: PROGRAM ID EOL . typeDefinitions variableDeclarations subprogramDeclarations compoundStatement STOP

    TYPE  shift, and go to state 6

    $default  reduce using rule 80 (typeDefinitions)

    typeDefinitions  go to state 7


state 6

   79 typeDefinitions: TYPE . multipleTypeDefs

    ID  shift, and go to state 8

    $default  reduce using rule 82 (multipleTypeDefs)

    multipleTypeDefs  go to state 9
    typeDefinition    go to state 10


state 7

    1 program: PROGRAM ID EOL typeDefinitions . variableDeclarations subprogramDeclarations compoundStatement STOP

    VAR  shift, and go to state 11

    $default  reduce using rule 3 (variableDeclarations)

    variableDeclarations  go to state 12


state 8

   83 typeDefinition: ID . EQUALS type EOL

    EQUALS  shift, and go to state 13


state 9

   79 typeDefinitions: TYPE multipleTypeDefs .

    $default  reduce using rule 79 (typeDefinitions)


state 10

   81 multipleTypeDefs: typeDefinition . multipleTypeDefs

    ID  shift, and go to state 8

    $default  reduce using rule 82 (multipleTypeDefs)

    multipleTypeDefs  go to state 14
    typeDefinition    go to state 10


state 11

    2 variableDeclarations: VAR . multiVarDeclarations

    ID  shift, and go to state 15

    multiVarDeclarations  go to state 16
    variableDeclaration   go to state 17
    identifierList        go to state 18


state 12

    1 program: PROGRAM ID EOL typeDefinitions variableDeclarations . subprogramDeclarations compoundStatement STOP

    FUNC       shift, and go to state 19
    PROCEDURE  shift, and go to state 20

    $default  reduce using rule 12 (subprogramDeclarations)

    subprogramDeclarations  go to state 21
    functionDeclaration     go to state 22
    func                    go to state 23
    proc                    go to state 24
    procedureDeclaration    go to state 25


state 13

   83 typeDefinition: ID EQUALS . type EOL

    ARRAY   shift, and go to state 26
    RECORD  shift, and go to state 27
    ID      shift, and go to state 28

    type  go to state 29


state 14

   81 multipleTypeDefs: typeDefinition multipleTypeDefs .

    $default  reduce using rule 81 (multipleTypeDefs)


state 15

    7 identifierList: ID . multiIds

    SEPARATOR  shift, and go to state 30

    $default  reduce using rule 9 (multiIds)

    multiIds  go to state 31


state 16

    2 variableDeclarations: VAR multiVarDeclarations .

    $default  reduce using rule 2 (variableDeclarations)


state 17

    4 multiVarDeclarations: variableDeclaration . EOL multiVarDeclarations
    5                     | variableDeclaration . EOL

    EOL  shift, and go to state 32


state 18

    6 variableDeclaration: identifierList . DECLARE type

    DECLARE  shift, and go to state 33


state 19

   15 func: FUNC .

    $default  reduce using rule 15 (func)


state 20

   16 proc: PROCEDURE .

    $default  reduce using rule 16 (proc)


state 21

    1 program: PROGRAM ID EOL typeDefinitions variableDeclarations subprogramDeclarations . compoundStatement STOP

    BGN  shift, and go to state 34

    compoundStatement  go to state 35


state 22

   11 subprogramDeclarations: functionDeclaration . EOL subprogramDeclarations

    EOL  shift, and go to state 36


state 23

   13 functionDeclaration: func . ID PAREN_L formalParameterList PAREN_R DECLARE resultType EOL blockOrForward

    ID  shift, and go to state 37


state 24

   17 procedureDeclaration: proc . ID PAREN_L formalParameterList PAREN_R EOL blockOrForward

    ID  shift, and go to state 38


state 25

   10 subprogramDeclarations: procedureDeclaration . EOL subprogramDeclarations

    EOL  shift, and go to state 39


state 26

   84 type: ARRAY . ARRAY_L INT RANGE INT ARRAY_R OF type

    ARRAY_L  shift, and go to state 40


state 27

   85 type: RECORD . fieldList endOfBlock

    ID  shift, and go to state 15

    identifierList  go to state 41
    paramDeclare    go to state 42
    fieldList       go to state 43


state 28

   86 type: ID .

    $default  reduce using rule 86 (type)


state 29

   83 typeDefinition: ID EQUALS type . EOL

    EOL  shift, and go to state 44


state 30

    8 multiIds: SEPARATOR . identifierList

    ID  shift, and go to state 15

    identifierList  go to state 45


state 31

    7 identifierList: ID multiIds .

    $default  reduce using rule 7 (identifierList)


state 32

    4 multiVarDeclarations: variableDeclaration EOL . multiVarDeclarations
    5                     | variableDeclaration EOL .

    ID  shift, and go to state 15

    $default  reduce using rule 5 (multiVarDeclarations)

    multiVarDeclarations  go to state 46
    variableDeclaration   go to state 17
    identifierList        go to state 18


state 33

    6 variableDeclaration: identifierList DECLARE . type

    ARRAY   shift, and go to state 26
    RECORD  shift, and go to state 27
    ID      shift, and go to state 28

    type  go to state 47


state 34

   26 compoundStatement: BGN . statementSequence endOfBlock

    BGN    shift, and go to state 34
    FOR    shift, and go to state 48
    IF     shift, and go to state 49
    WHILE  shift, and go to state 50
    ID     shift, and go to state 51

    $default  reduce using rule 43 (simpleStatement)

    compoundStatement    go to state 52
    statementSequence    go to state 53
    statement            go to state 54
    otherStatements      go to state 55
    loopHeader           go to state 56
    open                 go to state 57
    matched              go to state 58
    simpleStatement      go to state 59
    assignmentStatement  go to state 60
    procedureStatement   go to state 61
    variable             go to state 62


state 35

    1 program: PROGRAM ID EOL typeDefinitions variableDeclarations subprogramDeclarations compoundStatement . STOP

    STOP  shift, and go to state 63


state 36

   11 subprogramDeclarations: functionDeclaration EOL . subprogramDeclarations

    FUNC       shift, and go to state 19
    PROCEDURE  shift, and go to state 20

    $default  reduce using rule 12 (subprogramDeclarations)

    subprogramDeclarations  go to state 64
    functionDeclaration     go to state 22
    func                    go to state 23
    proc                    go to state 24
    procedureDeclaration    go to state 25


state 37

   13 functionDeclaration: func ID . PAREN_L formalParameterList PAREN_R DECLARE resultType EOL blockOrForward

    PAREN_L  shift, and go to state 65


state 38

   17 procedureDeclaration: proc ID . PAREN_L formalParameterList PAREN_R EOL blockOrForward

    PAREN_L  shift, and go to state 66


state 39

   10 subprogramDeclarations: procedureDeclaration EOL . subprogramDeclarations

    FUNC       shift, and go to state 19
    PROCEDURE  shift, and go to state 20

    $default  reduce using rule 12 (subprogramDeclarations)

    subprogramDeclarations  go to state 67
    functionDeclaration     go to state 22
    func                    go to state 23
    proc                    go to state 24
    procedureDeclaration    go to state 25


state 40

   84 type: ARRAY ARRAY_L . INT RANGE INT ARRAY_R OF type

    INT  shift, and go to state 68


state 41

   21 paramDeclare: identifierList . DECLARE type

    DECLARE  shift, and go to state 69


state 42

   87 fieldList: paramDeclare . EOL fieldList
   88          | paramDeclare .

    EOL  shift, and go to state 70

    $default  reduce using rule 88 (fieldList)


state 43

   85 type: RECORD fieldList . endOfBlock

    END  shift, and go to state 71

    endOfBlock  go to state 72


state 44

   83 typeDefinition: ID EQUALS type EOL .

    $default  reduce using rule 83 (typeDefinition)


state 45

    8 multiIds: SEPARATOR identifierList .

    $default  reduce using rule 8 (multiIds)


state 46

    4 multiVarDeclarations: variableDeclaration EOL multiVarDeclarations .

    $default  reduce using rule 4 (multiVarDeclarations)


state 47

    6 variableDeclaration: identifierList DECLARE type .

    $default  reduce using rule 6 (variableDeclaration)


state 48

   33 loopHeader: FOR . ID ASSIGNMENT expression TO expression DO

    ID  shift, and go to state 73


state 49

   35 open: IF . expression THEN statement
   36     | IF . expression THEN matched ELSE open
   38 matched: IF . expression THEN matched ELSE matched

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 75
    simpleExpression  go to state 76
    sign              go to state 77


state 50

   34 loopHeader: WHILE . expression DO

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 78
    simpleExpression  go to state 76
    sign              go to state 77


state 51

   45 procedureStatement: ID . PAREN_L actualParameterList PAREN_R
   50 variable: ID . componentSelection

    STOP     shift, and go to state 79
    PAREN_L  shift, and go to state 80
    ARRAY_L  shift, and go to state 81

    $default  reduce using rule 53 (componentSelection)

    componentSelection  go to state 82


state 52

   31 otherStatements: compoundStatement .

    $default  reduce using rule 31 (otherStatements)


state 53

   26 compoundStatement: BGN statementSequence . endOfBlock

    END  shift, and go to state 71

    endOfBlock  go to state 83


state 54

   27 statementSequence: statement . EOL statementSequence
   28                  | statement .

    EOL  shift, and go to state 84

    $default  reduce using rule 28 (statementSequence)


state 55

   39 matched: otherStatements .

    $default  reduce using rule 39 (matched)


state 56

   37 open: loopHeader . open
   40 matched: loopHeader . matched

    BGN    shift, and go to state 34
    FOR    shift, and go to state 48
    IF     shift, and go to state 49
    WHILE  shift, and go to state 50
    ID     shift, and go to state 51

    $default  reduce using rule 43 (simpleStatement)

    compoundStatement    go to state 52
    otherStatements      go to state 55
    loopHeader           go to state 56
    open                 go to state 85
    matched              go to state 86
    simpleStatement      go to state 59
    assignmentStatement  go to state 60
    procedureStatement   go to state 61
    variable             go to state 62


state 57

   29 statement: open .

    $default  reduce using rule 29 (statement)


state 58

   30 statement: matched .

    $default  reduce using rule 30 (statement)


state 59

   32 otherStatements: simpleStatement .

    $default  reduce using rule 32 (otherStatements)


state 60

   41 simpleStatement: assignmentStatement .

    $default  reduce using rule 41 (simpleStatement)


state 61

   42 simpleStatement: procedureStatement .

    $default  reduce using rule 42 (simpleStatement)


state 62

   44 assignmentStatement: variable . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 87


state 63

    1 program: PROGRAM ID EOL typeDefinitions variableDeclarations subprogramDeclarations compoundStatement STOP .

    $default  reduce using rule 1 (program)


state 64

   11 subprogramDeclarations: functionDeclaration EOL subprogramDeclarations .

    $default  reduce using rule 11 (subprogramDeclarations)


state 65

   13 functionDeclaration: func ID PAREN_L . formalParameterList PAREN_R DECLARE resultType EOL blockOrForward

    ID  shift, and go to state 15

    $default  reduce using rule 25 (formalParameterList)

    identifierList       go to state 41
    paramDeclare         go to state 88
    paramList            go to state 89
    formalParameterList  go to state 90


state 66

   17 procedureDeclaration: proc ID PAREN_L . formalParameterList PAREN_R EOL blockOrForward

    ID  shift, and go to state 15

    $default  reduce using rule 25 (formalParameterList)

    identifierList       go to state 41
    paramDeclare         go to state 88
    paramList            go to state 89
    formalParameterList  go to state 91


state 67

   10 subprogramDeclarations: procedureDeclaration EOL subprogramDeclarations .

    $default  reduce using rule 10 (subprogramDeclarations)


state 68

   84 type: ARRAY ARRAY_L INT . RANGE INT ARRAY_R OF type

    RANGE  shift, and go to state 92


state 69

   21 paramDeclare: identifierList DECLARE . type

    ARRAY   shift, and go to state 26
    RECORD  shift, and go to state 27
    ID      shift, and go to state 28

    type  go to state 93


state 70

   87 fieldList: paramDeclare EOL . fieldList

    ID  shift, and go to state 15

    identifierList  go to state 41
    paramDeclare    go to state 42
    fieldList       go to state 94


state 71

   89 endOfBlock: END .

    $default  reduce using rule 89 (endOfBlock)


state 72

   85 type: RECORD fieldList endOfBlock .

    $default  reduce using rule 85 (type)


state 73

   33 loopHeader: FOR ID . ASSIGNMENT expression TO expression DO

    ASSIGNMENT  shift, and go to state 95


state 74

   77 sign: ADDOP .

    $default  reduce using rule 77 (sign)


state 75

   35 open: IF expression . THEN statement
   36     | IF expression . THEN matched ELSE open
   38 matched: IF expression . THEN matched ELSE matched

    THEN  shift, and go to state 96


state 76

   54 expression: simpleExpression . relationalOp simpleExpression
   55           | simpleExpression .

    RELATIONAL  shift, and go to state 97
    EQUALS      shift, and go to state 98

    $default  reduce using rule 55 (expression)

    relationalOp  go to state 99


state 77

   56 simpleExpression: sign . term addOpTerm

    NOT             shift, and go to state 100
    PAREN_L         shift, and go to state 101
    INT             shift, and go to state 102
    ID              shift, and go to state 103
    STRING_LITERAL  shift, and go to state 104

    variable           go to state 105
    term               go to state 106
    factorOptions      go to state 107
    factor             go to state 108
    functionReference  go to state 109


state 78

   34 loopHeader: WHILE expression . DO

    DO  shift, and go to state 110


state 79

   51 componentSelection: STOP . ID componentSelection

    ID  shift, and go to state 111


state 80

   45 procedureStatement: ID PAREN_L . actualParameterList PAREN_R

    ADDOP  shift, and go to state 74

    PAREN_R   reduce using rule 49 (actualParameterList)
    $default  reduce using rule 78 (sign)

    apList               go to state 112
    actualParameterList  go to state 113
    expression           go to state 114
    simpleExpression     go to state 76
    sign                 go to state 77


state 81

   52 componentSelection: ARRAY_L . expression ARRAY_R componentSelection

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 115
    simpleExpression  go to state 76
    sign              go to state 77


state 82

   50 variable: ID componentSelection .

    $default  reduce using rule 50 (variable)


state 83

   26 compoundStatement: BGN statementSequence endOfBlock .

    $default  reduce using rule 26 (compoundStatement)


state 84

   27 statementSequence: statement EOL . statementSequence

    BGN    shift, and go to state 34
    FOR    shift, and go to state 48
    IF     shift, and go to state 49
    WHILE  shift, and go to state 50
    ID     shift, and go to state 51

    $default  reduce using rule 43 (simpleStatement)

    compoundStatement    go to state 52
    statementSequence    go to state 116
    statement            go to state 54
    otherStatements      go to state 55
    loopHeader           go to state 56
    open                 go to state 57
    matched              go to state 58
    simpleStatement      go to state 59
    assignmentStatement  go to state 60
    procedureStatement   go to state 61
    variable             go to state 62


state 85

   37 open: loopHeader open .

    $default  reduce using rule 37 (open)


state 86

   40 matched: loopHeader matched .

    $default  reduce using rule 40 (matched)


state 87

   44 assignmentStatement: variable ASSIGNMENT . expression

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 117
    simpleExpression  go to state 76
    sign              go to state 77


state 88

   23 paramList: paramDeclare .

    $default  reduce using rule 23 (paramList)


state 89

   22 paramList: paramList . EOL paramDeclare
   24 formalParameterList: paramList .

    EOL  shift, and go to state 118

    $default  reduce using rule 24 (formalParameterList)


state 90

   13 functionDeclaration: func ID PAREN_L formalParameterList . PAREN_R DECLARE resultType EOL blockOrForward

    PAREN_R  shift, and go to state 119


state 91

   17 procedureDeclaration: proc ID PAREN_L formalParameterList . PAREN_R EOL blockOrForward

    PAREN_R  shift, and go to state 120


state 92

   84 type: ARRAY ARRAY_L INT RANGE . INT ARRAY_R OF type

    INT  shift, and go to state 121


state 93

   21 paramDeclare: identifierList DECLARE type .

    $default  reduce using rule 21 (paramDeclare)


state 94

   87 fieldList: paramDeclare EOL fieldList .

    $default  reduce using rule 87 (fieldList)


state 95

   33 loopHeader: FOR ID ASSIGNMENT . expression TO expression DO

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 122
    simpleExpression  go to state 76
    sign              go to state 77


state 96

   35 open: IF expression THEN . statement
   36     | IF expression THEN . matched ELSE open
   38 matched: IF expression THEN . matched ELSE matched

    BGN    shift, and go to state 34
    FOR    shift, and go to state 48
    IF     shift, and go to state 49
    WHILE  shift, and go to state 50
    ID     shift, and go to state 51

    $default  reduce using rule 43 (simpleStatement)

    compoundStatement    go to state 52
    statement            go to state 123
    otherStatements      go to state 55
    loopHeader           go to state 56
    open                 go to state 57
    matched              go to state 124
    simpleStatement      go to state 59
    assignmentStatement  go to state 60
    procedureStatement   go to state 61
    variable             go to state 62


state 97

   59 relationalOp: RELATIONAL .

    $default  reduce using rule 59 (relationalOp)


state 98

   60 relationalOp: EQUALS .

    $default  reduce using rule 60 (relationalOp)


state 99

   54 expression: simpleExpression relationalOp . simpleExpression

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    simpleExpression  go to state 125
    sign              go to state 77


state 100

   68 factorOptions: NOT . factor

    NOT             shift, and go to state 100
    PAREN_L         shift, and go to state 101
    INT             shift, and go to state 102
    ID              shift, and go to state 103
    STRING_LITERAL  shift, and go to state 104

    variable           go to state 105
    factorOptions      go to state 107
    factor             go to state 126
    functionReference  go to state 109


state 101

   69 factorOptions: PAREN_L . expression PAREN_R

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 127
    simpleExpression  go to state 76
    sign              go to state 77


state 102

   64 factorOptions: INT .

    $default  reduce using rule 64 (factorOptions)


state 103

   50 variable: ID . componentSelection
   71 functionReference: ID . PAREN_L actualParameterList PAREN_R

    STOP     shift, and go to state 79
    PAREN_L  shift, and go to state 128
    ARRAY_L  shift, and go to state 81

    $default  reduce using rule 53 (componentSelection)

    componentSelection  go to state 82


state 104

   65 factorOptions: STRING_LITERAL .

    $default  reduce using rule 65 (factorOptions)


state 105

   66 factorOptions: variable .

    $default  reduce using rule 66 (factorOptions)


state 106

   56 simpleExpression: sign term . addOpTerm

    OR     shift, and go to state 129
    ADDOP  shift, and go to state 130

    $default  reduce using rule 58 (addOpTerm)

    addOpTerm  go to state 131
    addOp      go to state 132


state 107

   70 factor: factorOptions .

    $default  reduce using rule 70 (factor)


state 108

   63 term: factor . mulOpFactor

    AND      shift, and go to state 133
    MOD      shift, and go to state 134
    MULTIOP  shift, and go to state 135

    $default  reduce using rule 62 (mulOpFactor)

    mulOpFactor  go to state 136
    mulOp        go to state 137


state 109

   67 factorOptions: functionReference .

    $default  reduce using rule 67 (factorOptions)


state 110

   34 loopHeader: WHILE expression DO .

    $default  reduce using rule 34 (loopHeader)


state 111

   51 componentSelection: STOP ID . componentSelection

    STOP     shift, and go to state 79
    ARRAY_L  shift, and go to state 81

    $default  reduce using rule 53 (componentSelection)

    componentSelection  go to state 138


state 112

   48 actualParameterList: apList .

    $default  reduce using rule 48 (actualParameterList)


state 113

   45 procedureStatement: ID PAREN_L actualParameterList . PAREN_R

    PAREN_R  shift, and go to state 139


state 114

   46 apList: expression . SEPARATOR apList
   47       | expression .

    SEPARATOR  shift, and go to state 140

    $default  reduce using rule 47 (apList)


state 115

   52 componentSelection: ARRAY_L expression . ARRAY_R componentSelection

    ARRAY_R  shift, and go to state 141


state 116

   27 statementSequence: statement EOL statementSequence .

    $default  reduce using rule 27 (statementSequence)


state 117

   44 assignmentStatement: variable ASSIGNMENT expression .

    $default  reduce using rule 44 (assignmentStatement)


state 118

   22 paramList: paramList EOL . paramDeclare

    ID  shift, and go to state 15

    identifierList  go to state 41
    paramDeclare    go to state 142


state 119

   13 functionDeclaration: func ID PAREN_L formalParameterList PAREN_R . DECLARE resultType EOL blockOrForward

    DECLARE  shift, and go to state 143


state 120

   17 procedureDeclaration: proc ID PAREN_L formalParameterList PAREN_R . EOL blockOrForward

    EOL  shift, and go to state 144


state 121

   84 type: ARRAY ARRAY_L INT RANGE INT . ARRAY_R OF type

    ARRAY_R  shift, and go to state 145


state 122

   33 loopHeader: FOR ID ASSIGNMENT expression . TO expression DO

    TO  shift, and go to state 146


state 123

   35 open: IF expression THEN statement .

    $default  reduce using rule 35 (open)


state 124

   30 statement: matched .
   36 open: IF expression THEN matched . ELSE open
   38 matched: IF expression THEN matched . ELSE matched

    ELSE  shift, and go to state 147

    $default  reduce using rule 30 (statement)


state 125

   54 expression: simpleExpression relationalOp simpleExpression .

    $default  reduce using rule 54 (expression)


state 126

   68 factorOptions: NOT factor .

    $default  reduce using rule 68 (factorOptions)


state 127

   69 factorOptions: PAREN_L expression . PAREN_R

    PAREN_R  shift, and go to state 148


state 128

   71 functionReference: ID PAREN_L . actualParameterList PAREN_R

    ADDOP  shift, and go to state 74

    PAREN_R   reduce using rule 49 (actualParameterList)
    $default  reduce using rule 78 (sign)

    apList               go to state 112
    actualParameterList  go to state 149
    expression           go to state 114
    simpleExpression     go to state 76
    sign                 go to state 77


state 129

   73 addOp: OR .

    $default  reduce using rule 73 (addOp)


state 130

   72 addOp: ADDOP .

    $default  reduce using rule 72 (addOp)


state 131

   56 simpleExpression: sign term addOpTerm .

    $default  reduce using rule 56 (simpleExpression)


state 132

   57 addOpTerm: addOp . term addOpTerm

    NOT             shift, and go to state 100
    PAREN_L         shift, and go to state 101
    INT             shift, and go to state 102
    ID              shift, and go to state 103
    STRING_LITERAL  shift, and go to state 104

    variable           go to state 105
    term               go to state 150
    factorOptions      go to state 107
    factor             go to state 108
    functionReference  go to state 109


state 133

   76 mulOp: AND .

    $default  reduce using rule 76 (mulOp)


state 134

   75 mulOp: MOD .

    $default  reduce using rule 75 (mulOp)


state 135

   74 mulOp: MULTIOP .

    $default  reduce using rule 74 (mulOp)


state 136

   63 term: factor mulOpFactor .

    $default  reduce using rule 63 (term)


state 137

   61 mulOpFactor: mulOp . factor mulOpFactor

    NOT             shift, and go to state 100
    PAREN_L         shift, and go to state 101
    INT             shift, and go to state 102
    ID              shift, and go to state 103
    STRING_LITERAL  shift, and go to state 104

    variable           go to state 105
    factorOptions      go to state 107
    factor             go to state 151
    functionReference  go to state 109


state 138

   51 componentSelection: STOP ID componentSelection .

    $default  reduce using rule 51 (componentSelection)


state 139

   45 procedureStatement: ID PAREN_L actualParameterList PAREN_R .

    $default  reduce using rule 45 (procedureStatement)


state 140

   46 apList: expression SEPARATOR . apList

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    apList            go to state 152
    expression        go to state 114
    simpleExpression  go to state 76
    sign              go to state 77


state 141

   52 componentSelection: ARRAY_L expression ARRAY_R . componentSelection

    STOP     shift, and go to state 79
    ARRAY_L  shift, and go to state 81

    $default  reduce using rule 53 (componentSelection)

    componentSelection  go to state 153


state 142

   22 paramList: paramList EOL paramDeclare .

    $default  reduce using rule 22 (paramList)


state 143

   13 functionDeclaration: func ID PAREN_L formalParameterList PAREN_R DECLARE . resultType EOL blockOrForward

    ID  shift, and go to state 154

    resultType  go to state 155


state 144

   17 procedureDeclaration: proc ID PAREN_L formalParameterList PAREN_R EOL . blockOrForward

    FORWARD  shift, and go to state 156
    VAR      shift, and go to state 11

    $default  reduce using rule 3 (variableDeclarations)

    variableDeclarations  go to state 157
    blockOrForward        go to state 158
    block                 go to state 159


state 145

   84 type: ARRAY ARRAY_L INT RANGE INT ARRAY_R . OF type

    OF  shift, and go to state 160


state 146

   33 loopHeader: FOR ID ASSIGNMENT expression TO . expression DO

    ADDOP  shift, and go to state 74

    $default  reduce using rule 78 (sign)

    expression        go to state 161
    simpleExpression  go to state 76
    sign              go to state 77


state 147

   36 open: IF expression THEN matched ELSE . open
   38 matched: IF expression THEN matched ELSE . matched

    BGN    shift, and go to state 34
    FOR    shift, and go to state 48
    IF     shift, and go to state 49
    WHILE  shift, and go to state 50
    ID     shift, and go to state 51

    $default  reduce using rule 43 (simpleStatement)

    compoundStatement    go to state 52
    otherStatements      go to state 55
    loopHeader           go to state 56
    open                 go to state 162
    matched              go to state 163
    simpleStatement      go to state 59
    assignmentStatement  go to state 60
    procedureStatement   go to state 61
    variable             go to state 62


state 148

   69 factorOptions: PAREN_L expression PAREN_R .

    $default  reduce using rule 69 (factorOptions)


state 149
